--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="#d">
     <link rel="manifest" href="#">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="portfolio.css">
     
     <title>portfolio</title>
 </head>
@@ -36,7 +36,7 @@
     <p>У меня есть опыт дизайнера и образование графического художника,
     поэтому я также могу участвовать в дизайне сайта.</p> </h3>
 </div>
-<img src="images/IMG_20230923_114454.jpg" alt="my photo" class="firstimg">
+<img src="IMG_20230923_114454.jpg" alt="my photo" class="firstimg">
 </header></div>
 
 
@@ -87,7 +87,7 @@
     <li>
         <div class="firstproect">
             <a href="https://gretta-sky.github.io/game_site_/" target="_blank" class="" rel="noopener noreferrer">
-                <img src="images/Снимок экрана 2024-11-07 180012.png" alt="Game" class="firstimgproect">
+                <img src="Снимок экрана 2024-11-07 180012.png" alt="Game" class="firstimgproect">
             </a>
             <div class="firsttext">
                 <a href="https://gretta-sky.github.io/game_site_/" target="_blank" class="firsttext1" rel="noopener noreferrer">
@@ -107,7 +107,7 @@
     <li>
         <div class="firstproect">
             <a href="https://gretta-sky.github.io/calendar/" target="_blank" class="" rel="noopener noreferrer">
-                <img src="images/Снимок экрана 2024-11-07 180105.png" alt="Calendar" class="firstimgproect">
+                <img src="Снимок экрана 2024-11-07 180105.png" alt="Calendar" class="firstimgproect">
             </a>
             <div class="firsttext">
                 <a href="https://gretta-sky.github.io/calendar/" target="_blank" class="firsttext1" rel="noopener noreferrer">
@@ -125,7 +125,7 @@
     <li>
         <div class="firstproect">
             <a href="https://gretta-sky.github.io/conference/" target="_blank" class="Conference" rel="noopener noreferrer">
-                <img src="images/Снимок экрана 2024-11-07 180305.png" alt="" class="firstimgproect">
+                <img src="Снимок экрана 2024-11-07 180305.png" alt="" class="firstimgproect">
             </a>
             <div class="firsttext">
                 <a href="https://gretta-sky.github.io/conference/" target="_blank" class="firsttext1" rel="noopener noreferrer">
@@ -142,7 +142,7 @@
     <li>
         <div class="firstproect">
             <a href="https://gretta-sky.github.io/list/" target="_blank" class="" rel="noopener noreferrer">
-                <img src="images/Снимок экрана 2024-11-07 180129.png" alt="List" class="firstimgproect">
+                <img src="Снимок экрана 2024-11-07 180129.png" alt="List" class="firstimgproect">
             </a>
             <div class="firsttext">
                 <a href="https://gretta-sky.github.io/list/" target="_blank" class="firsttext1" rel="noopener noreferrer">
@@ -159,7 +159,7 @@
     <li>
         <div class="firstproect">
             <a href="https://kit-kuplinov.github.io/for-lover/" target="_blank" class="" rel="noopener noreferrer">
-                <img src="images/Снимок экрана 2024-11-07 175935.png" alt="Valentine's card" class="firstimgproect">
+                <img src="Снимок экрана 2024-11-07 175935.png" alt="Valentine's card" class="firstimgproect">
             </a>
             <div class="firsttext">
                 <a href="https://kit-kuplinov.github.io/for-lover/" target="_blank" class="firsttext1" rel="noopener noreferrer">
