--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <li>- Южный Федеральный Университет. Направление 04.05.01. Химический факультет, 2019-2023 гг.</li>
 <li>- Курсы по веб-разработке на платформе Merionet:
 Фронтенд-разработчик с нуля. Номер сертификата: eLRThWmv7E.</li>
-<li>- Курсы по графическому дизайну на платформе Skillbox.</li>
+<li>- Курсы по графическому дизайну на платформе Skillbox: Основы 2D-графики.</li>
 </ul>
 
 
