--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </a>
                 <p class="nameprog">HTML, CSS(SASS), JS</p>
                 <p class="text1-2">Лендинг для компьютерной игры.
-                    Проект включает адаптивный дизайн для различных устройств, анимацию при
+                    Адаптирован под пк. Проект включает анимацию при
                     прокрутке страницы. Включает оптимизированную загрузку контента с использованием lazy loading.
                 </p>
             </div>
@@ -132,7 +132,7 @@
                     <h2 class="text1">Conference</h2>
                 </a>
                 <p class="nameprog">HTML, CSS(SASS), JS</p>
-                <p class="text1-2">Лендинг для конференции.</p>
+                <p class="text1-2">Лендинг для конференции. Включает адаптивный дизайн для различных устройств.</p>
             </div>
         <div><a href="https://gretta-sky.github.io/conference/" target="_blank" class="btn1" rel="noopener noreferrer">перейти</a></div>
         </div>
