--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </a>
                 <p class="nameprog">HTML, CSS(SASS), JS</p>
                 <p class="text1-2">Лендинг для компьютерной игры.
-                    Адаптирован под пк. Проект включает анимацию при
+                    Адаптирован под ПК. Проект включает анимацию при
                     прокрутке страницы. Включает оптимизированную загрузку контента с использованием lazy loading.
                 </p>
             </div>
