--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <h2 class="text1">List</h2>
                 </a>
                 <p class="nameprog">HTML, CSS(SASS), JS</p>
-                <p class="text1-2">Веб-приложение, позволяющее составлять список, редактировать его и дополнять.</p>
+                <p class="text1-2">Веб-приложение, позволяющее составлять список, редактировать его и дополнять. Адаптирован под ПК.</p>
             </div>
         <div><a href="https://gretta-sky.github.io/list/" target="_blank" class="btn1" rel="noopener noreferrer">перейти</a></div>
         </div>
