--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 <div ><h1 class="portfolio">Портфолио</h1> 
 <div class="firstimg1"><div class="firstportf"><h2 class="h2_1">
-    Здравствуй! Меня зовут Маргарита, и я начинающий фронтендер, </h2>
+    Здравствуй! Меня зовут Маргарита, и я начинающий Frontend-разработчик, </h2>
     <h3 class="h3_1"> увлечённый созданием современных веб-приложений. 
     Я стремлюсь к тому, чтобы мои проекты были не только функциональными,
     но и эстетически привлекательными. 
