--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 
     <li>
         <div class="firstproect">
-            <a href="https://kit-kuplinov.github.io/for-lover/" target="_blank" class="" rel="noopener noreferrer">
+            <a href="https://gretta-sky.github.io/for-lover/" target="_blank" class="" rel="noopener noreferrer">
                 <img src="Снимок экрана 2024-11-07 175935.png" alt="Valentine's card" class="firstimgproect">
             </a>
             <div class="firsttext">
-                <a href="https://kit-kuplinov.github.io/for-lover/" target="_blank" class="firsttext1" rel="noopener noreferrer">
+                <a href="https://gretta-sky.github.io/for-lover/" target="_blank" class="firsttext1" rel="noopener noreferrer">
                     <h2 class="text1">Valentine's card</h2>
                 </a>
                 <p class="nameprog">HTML, CSS(SASS), JS</p>
